# py_api

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: container.yml  tests.yml
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
resources/: tp_fastapi.drawio
src/: local_dev.db
src/app/: main.py
src/app/api/: deps.py  exception_handlers.py
src/app/api/routers/: genres.py  movies.py  opinions.py  participants.py
src/app/core/: config.py  exceptions.py
src/app/db/: seeding.py  session.py
src/app/models/: __init__.py  genre.py  member.py  movie.py  movie_actors.py  opinion.py  participant.py  person.py
src/app/repositories/: genre.py  member.py  movie.py  opinion.py  participant.py
src/app/schemas/: genre.py  member.py  movie.py  opinion.py  participant.py  person.py
src/app/services/: genre.py  member.py  movie.py  opinion.py  participant.py
tests/: conftest.py
tests/api/: test_movies_api.py
tests/enonce/: test_etape2_schemas.py  test_etape3_repositories.py  test_etape4_services.py  test_etape5_api.py
tests/services/: test_movie_service.py
